--- a/HW2_刘尧瑞_2021013294.md
+++ b/HW2_刘尧瑞_2021013294.md
@@ -1,8 +1,10 @@
+# 2.2
+
 ### 列出1.gtf文件中 XI 号染色体上的后 10 个 CDS （按照每个CDS终止位置的基因组坐标进行sort）。
 
-代码：cat 1.gtf | grep -w 'XI' |grep -w 'CDS' | sort -k5 -n | tail -10
+##### 代码：cat 1.gtf | grep -w 'XI' |grep -w 'CDS' | sort -k5 -n | tail -10
 
-结果：
+##### 结果：
 
 XI      ensembl CDS     631152  632798  .       +       0       gene_id "YKR097W"; gene_version "1"; transcript_id "YKR097W"; transcript_version "1"; exon_number "1"; gene_name "PCK1"; gene_source "ensembl"; gene_biotype "protein_coding"; transcript_name "PCK1"; transcript_source "ensembl"; transcript_biotype "protein_coding"; protein_id "YKR097W"; protein_version "1";
 
@@ -24,11 +26,11 @@ XI      ensembl CDS     658719  660464  .       -       0       gene_id "YKR105C
 
 XI      ensembl CDS     661442  663286  .       +       0       gene_id "YKR106W"; gene_version "1"; transcript_id "YKR106W"; transcript_version "1"; exon_number "1"; gene_name "GEX2"; gene_source "ensembl"; gene_biotype "protein_coding"; transcript_name "GEX2"; transcript_source "ensembl"; transcript_biotype "protein_coding"; protein_id "YKR106W"; protein_version "1";
 
-###统计 IV 号染色体上各类 feature （1.gtf文件的第3列，有些注释文件中还应同时考虑第2列） 的数目，并按升序排列。
+### 统计 IV 号染色体上各类 feature （1.gtf文件的第3列，有些注释文件中还应同时考虑第2列） 的数目，并按升序排列。
 
-代码: grep -v '^#' 1.gtf |grep -w 'IV' | awk '{print $3}'| sort | uniq -c
+##### 代码: grep -v '^#' 1.gtf |grep -w 'IV' | awk '{print $3}'| sort | uniq -c
 
-结果： 
+##### 结果： 
    
     895 CDS
     
@@ -42,21 +44,21 @@ XI      ensembl CDS     661442  663286  .       +       0       gene_id "YKR106W
     
     886 transcript
 
-###寻找不在 IV 号染色体上的所有负链上的基因中最长的2条 CDS 序列，输出他们的长度。
+### 寻找不在 IV 号染色体上的所有负链上的基因中最长的2条 CDS 序列，输出他们的长度。
 
-代码： grep -v 'IV' 1.gtf | awk '$7=="-"{print}' | awk '{print $5-$4+1}' | sort | tail -2
+##### 代码： grep -v 'IV' 1.gtf | awk '$7=="-"{print}' | awk '{print $5-$4+1}' | sort | tail -2
 
-结果：
-
-999
+##### 结果：
 
 999
 
-###寻找 XV 号染色体上长度最长的5条基因，并输出基因 id 及对应的长度。
+999
 
-代码： grep -w 'XV' 1.gtf | awk '{print $5-$4+1,$0}' | sort -k1 -n| tail -5 | awk '{print $10,$11,$1}'
+### 寻找 XV 号染色体上长度最长的5条基因，并输出基因 id 及对应的长度。
 
-结果：
+##### 代码： grep -w 'XV' 1.gtf | awk '{print $5-$4+1,$0}' | sort -k1 -n| tail -5 | awk '{print $10,$11,$1}'
+
+##### 结果：
 
 gene_id "YOR396W"; 5391
 
@@ -68,11 +70,11 @@ gene_id "YOL081W"; 9240
 
 gene_id "YOL081W"; 9240
 
-###统计1.gtf列数
+### 统计1.gtf列数
 
-代码：grep -v '^#' 1.gtf |awk '{print NF}'| sort | uniq -c
+##### 代码：grep -v '^#' 1.gtf |awk '{print NF}'| sort | uniq -c
 
-结果：
+##### 结果：
 
    数量 列数
 
@@ -91,3 +93,42 @@ gene_id "YOL081W"; 9240
    4067 32
 
   10534 34
+
+# 2.3
+
+##### bash脚本：
+
+#!/bin/bash
+
+CUR_DIR=`ls /home/test/bash_homework/bash_homework`
+
+for val in $CUR_DIR
+
+do
+
+        if [ -f "/home/test/bash_homework/bash_homework/$val" ];then
+
+                echo $val>>filename.txt
+                
+        fi
+
+        if [ -d "/home/test/bash_homework/bash_homework/$val" ];then
+
+                echo $val>>dirname.txt
+
+        fi
+
+done
+
+exit 0
+
+##### 输出结果：
+
+dirname.txt:
+
+a-docker  appbackup  bin  biosoft  c1-RBPanno  datatable  db  download  e-annotation  exRNA  genome  git  highcharts  home  hub29  ibme  l-lwl  map2  mljs  module  mogproject  node_modules 
+ perl5  postar2  postar_app  postar.docker  RBP_map  rout  script  script_backup  software  tcga  test  tmp  tmp_script  var  x-rbp
+
+filename.txt
+
+ a1.txt  a.txt  b1.txt  bam_wig.sh  b.filter_random.pl  c1.txt  chrom.size  c.txt  d1.txt  dir.txt  e1.txt  f1.txt  human_geneExp.txt  if.sh  image  insitiue.txt  mouse_geneExp.txt  name.txt  number.sh  out.bw  random.sh  read.sh  test3.sh  test4.sh  test.sh  test.txt  wigToBigWig
