--- a/HW3_刘尧瑞_2021013294.md
+++ b/HW3_刘尧瑞_2021013294.md
@@ -81,3 +81,7 @@ blast使用了哈希表的想法，先截取一些小片段并存储起来，然
 ---
 
 ### 4.我们常见的PAM250有如下图所示的两种（一种对称、一种不对称），请阅读一下 "Symmetry of the PAM matrices" @ wikipedia，再利用Google/wikipedia等工具查阅更多资料，然后总结和解释一下这两种（对称和不对称）PAM250不一样的原因及其在应用上的不同。
+
+PAM250的计算取决于矩阵A的值和每个氨基酸出现的频率，其中A（i,j）表示在总样本为N时氨基酸i突变为氨基酸j的事件发生的个数。由于我们研究的样本绝大多数取于现代，对于同一个位点氨基酸i和氨基酸j在进化上没有先后的顺序，故可以假设氨基酸i突变为j和氨基酸j突变为i的事件次数是一样的，此时A为对称矩阵，于是可以推导出PAM也为对称矩阵。如果考虑进化的关系，通过对与系统进化树的研究我们能够算出氨基酸i和氨基酸j之间突变的事件次数是不同的，此时A不是对称矩阵，于是可以推导出PAM也不是对称矩阵。
+
+在应用上，如果比较的两个序列来源于同一物种，可以认为二者在进化上没有先后关系，这时候就可以用对称的PAM矩阵计算；如果比较的两条序列来源于不同物种，甚至差距较大，那么可以考虑进化的关系，用不对称的PAM矩阵可能会更合理。
