--- a/HW4_刘尧瑞_2021013294.md
+++ b/HW4_刘尧瑞_2021013294.md
@@ -1,3 +1,63 @@
 ### 1.请阐述bowtie中利用了 BWT 的什么性质提高了运算速度？并通过哪些策略优化了对内存的需求
 
-使用BWT处理后
+使用BWT处理后利用序列矩阵的第一列和最后一列对于同碱基的排序不变的性质，可以线性的进行搜索，从而保证了运算速度。bowtie用Milestone的方式便于快速搜索同时又不会占用太多空间，用Checkpoint来记录碱基的排序可以避免存储整个序列，也能节省空间。
+
+---
+### 2.用bowtie将 THA2.fa mapping 到 BowtieIndex/YeastGenome 上，得到 THA2.sam，统计mapping到不同染色体上的reads数量(即统计每条染色体都map上了多少条reads)。
+
+**code:**
+```shell
+bowtie -v 2 -m 10 --best --strata BowtieIndex/YeastGenome -f THA1.fa -S THA1.sa #mapping并输出为sam文件
+grep -v "^@" THA2.sam|awk -F '\t' '{print $3}'|sort|uniq -c #去掉开头的信息保留mapping结果，随后统计染色体上map的reads数量
+```
+**结果：**
+```shell
+     92 *        #未成功match到基因组上的reads数量
+     18 chrI
+     51 chrII
+     15 chrIII
+    194 chrIV
+     25 chrIX
+     12 chrmt
+     33 chrV
+     17 chrVI
+    125 chrVII
+     68 chrVIII
+     71 chrX
+     56 chrXI
+    169 chrXII
+     67 chrXIII
+     58 chrXIV
+    101 chrXV
+     78 chrXVI
+```
+---
+### 3.查阅资料，回答以下问题:
+#### 3.1什么是sam/bam文件中的"CIGAR string"? 它包含了什么信息?
+CIGAR String 为匹配结果信息，格式为“配对碱基数”+字母，字母对应的含义由下表给出：
+|Op |BAM |Description  |Consumes query  |Consumes reference |
+|:---:|:---:|---|:---:|:---:|
+|M |0 |alignment match (can be a sequence match or mismatch) |yes |yes |
+|I |1 |insertion to the reference |yes |no |
+|D |2 |deletion from the reference |no |yes |
+|N |3 |skipped region from the reference |no |yes |
+|S |4 |soft clipping (clipped sequences present in SEQ) |yes |no |
+|H |5 |hard clipping (clipped sequences NOT present in SEQ) |no |no |
+|P |6 |padding (silent deletion from padded reference) |no |no |
+|= |7 |sequence match |yes |yes |
+|X |8 |sequence mismatch |yes |yes |
+
+---
+#### 3.2"soft clip"的含义是什么，在CIGAR string中如何表示？
+Soft Clip，是指虽然比对不到基因组，但是在BAM/SAM文件中的reads上还是存在的序列（并没有被截断扔掉的序列），此时CIGAR列对应的S(Soft)的符号。
+
+---
+#### 3.3什么是reads的mapping quality? 它反映了什么样的信息?
+mapping quality = −10 log10 P{mapping位置错误},四舍五入到最近的整数.即mapping quality高反映mapping出错的可能性低。
+
+---
+#### 3.4仅根据sam/bam文件的信息，能否推断出read mapping到的区域对应的参考基因组序列? 
+可以。首先sam/bam文件给出了reads的序列，然后给出了比对后的MD tag,这里记录了第几位有缺失或者SNP，根据这些可以得到reference的序列。
+
+---
+### 4.软件安装和资源文件的下载也是生物信息学实践中的重要步骤。请自行安装教程中未涉及的bwa软件，从UCSC Genome Browser下载Yeast (S. cerevisiae, sacCer3)基因组序列。使用bwa对Yeast基因组sacCer3.fa建立索引，并利用bwa将THA2.fa，mapping到Yeast参考基因组上，并进一步转化输出得到THA2-bwa.sam文件。
