--- a/HW4_刘尧瑞_2021013294.md
+++ b/HW4_刘尧瑞_2021013294.md
@@ -61,3 +61,15 @@ mapping quality = −10 log10 P{mapping位置错误},四舍五入到最近的整
 
 ---
 ### 4.软件安装和资源文件的下载也是生物信息学实践中的重要步骤。请自行安装教程中未涉及的bwa软件，从UCSC Genome Browser下载Yeast (S. cerevisiae, sacCer3)基因组序列。使用bwa对Yeast基因组sacCer3.fa建立索引，并利用bwa将THA2.fa，mapping到Yeast参考基因组上，并进一步转化输出得到THA2-bwa.sam文件。
+
+**code：**
+```shell
+bwa index sacCer3.fa #建立索引
+bwa mem sacCer3.fa /home/test/mapping/THA2.fa >THA2-bwa.sam #比对序列
+```
+输出文件见文件夹。
+
+---
+### 5.利用Genome Browser浏览 1.Mapping的 Homework 得到的sam/bam文件，并仿照上文中的 examples截图展示一个 gene的区域。
+
+截图见文件夹。
