--- a/HW5_刘尧瑞_2021013294.md
+++ b/HW5_刘尧瑞_2021013294.md
@@ -8,3 +8,10 @@
 #### 1.2基因中的非编码RNA的最新注释是多少个了？请详细列一下其中的非编码RNA的细分类型的数目，并对主要的非编码RNA是什么做的用1-2句解释一下。
 non-coding RNA为49182个，其中组成如下：
 ![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/07267181-d247-4987-8796-08d3980aaeb7)
+几种主要的ncRNA：miRNA，能够沉默mRNA从而调节翻译；snRNA能够调节核内的RNA聚合酶II（RNAPII）转录；lncRNA,能够自我调节，并且在基因表达中起转录激活剂和转录后调节剂的作用,等等。
+
+数据来源：https://www.ncbi.nlm.nih.gov/genome/annotation_euk/Homo_sapiens/GCF_000001405.40-RS_2023_10/ ，时间为Oct，2023
+
+---
+### 2.PART III-1.mapping-1.2 bedtools and samtools-课后作业
+#### 2.1
