--- a/HW5_刘尧瑞_2021013294.md
+++ b/HW5_刘尧瑞_2021013294.md
@@ -8,10 +8,23 @@
 #### 1.2基因中的非编码RNA的最新注释是多少个了？请详细列一下其中的非编码RNA的细分类型的数目，并对主要的非编码RNA是什么做的用1-2句解释一下。
 non-coding RNA为49182个，其中组成如下：
 ![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/07267181-d247-4987-8796-08d3980aaeb7)
+
 几种主要的ncRNA：miRNA，能够沉默mRNA从而调节翻译；snRNA能够调节核内的RNA聚合酶II（RNAPII）转录；lncRNA,能够自我调节，并且在基因表达中起转录激活剂和转录后调节剂的作用,等等。
 
 数据来源：https://www.ncbi.nlm.nih.gov/genome/annotation_euk/Homo_sapiens/GCF_000001405.40-RS_2023_10/ ，时间为Oct，2023
 
 ---
 ### 2.PART III-1.mapping-1.2 bedtools and samtools-课后作业
-#### 2.1
+#### 2.1我们提供的bam文件COAD.ACTB.bam是单端测序分析的结果还是双端测序分析的结果？为什么？
+单端测序。因为测序reads和mapping数量都是185650.
+
+---
+#### 2.2查阅资料回答什么叫做"secondary alignment"？并统计提供的bam文件中，有多少条记录属于"secondary alignment?" 
+当一条read比对到多个位置时，用secondary alignment代表次优比对（也就是除了1条为primary以外，其他的都是secondary alignment）。
+
+**code：samtools view -f 256 COAD.ACTB.bam|wc -l**
+
+统计结果为:4923
+
+---
+#### 2.3请根据hg38.ACTB.gff计算出在ACTB基因的每一条转录本中都被注释成intron的区域，以bed格式输出。并提取COAD.ACTB.bam中比对到ACTB基因intron区域的bam信息，后将bam转换为fastq文件。
