--- a/HW5_刘尧瑞_2021013294.md
+++ b/HW5_刘尧瑞_2021013294.md
@@ -22,9 +22,28 @@ non-coding RNA为49182个，其中组成如下：
 #### 2.2查阅资料回答什么叫做"secondary alignment"？并统计提供的bam文件中，有多少条记录属于"secondary alignment?" 
 当一条read比对到多个位置时，用secondary alignment代表次优比对（也就是除了1条为primary以外，其他的都是secondary alignment）。
 
-**code：samtools view -f 256 COAD.ACTB.bam|wc -l**
-
+**code：**
+```shell
+samtools view -f 256 COAD.ACTB.bam|wc -l
+```
 统计结果为:4923
 
 ---
 #### 2.3请根据hg38.ACTB.gff计算出在ACTB基因的每一条转录本中都被注释成intron的区域，以bed格式输出。并提取COAD.ACTB.bam中比对到ACTB基因intron区域的bam信息，后将bam转换为fastq文件。
+
+**code:**
+```shell
+awk '{if($3=="gene")print}' hg38.ACTB.gff > ACTB.gene.bed
+awk '{if($3=="exon")print}' hg38.ACTB.gff > ACTB.exon.bed
+bedtools subtract -a ACTB.gene.bed -b ACTB.exon.bed > ACTB.intron.bed
+bedtools bamtofastq -i COAD.ACTB.intron.bam -fq COAD.ACTB.intron.fastq
+```
+---
+#### 2.4利用COAD.ACTB.bam计算出reads在ACTB基因对应的genomic interval上的coverage，以bedgraph格式输出。
+
+**code:**
+```shell
+samtools sort COAD.ACTB.bam > COAD.ACTB.sort.bam
+samtools index COAD.ACTB.sort.bam
+bedtools genomecov -ibam COAD.ACTB.sort.bam -split -bg > COAD.coverage.bedgraph
+```
