--- a/HW7_刘尧瑞_2021013294.md
+++ b/HW7_刘尧瑞_2021013294.md
@@ -1,3 +1,17 @@
+### 1.请阐述 RNA-seq 中归一化基因表达值的几种基本计算方法。
+
+RNA-seq中归一化基因表达值的方法：
+1.若样本间的主要差异为序列的表达量差异，可以用CPM/RPM（适用于small RNA-seq）。
+2.若样本间的主要差异为序列的表达量差异以及表达区域的差异，可以用RPKM（适用于poly-A/total RNA-seq），FPKM（适用于paired-end RNA-seq），TPM。
+3.若样本间的主要差异为多个基因的表达水平差异，可以用TMM，RLE。
+
+---
+### 2.根据下述图片描述，填出对应选项:
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/9b2689bd-277b-47b0-af3a-615a9297247c)
+
+答案：EDA
+
+---
 ### 3. 通过软件计算，判断给出文件shape02数据是来自哪一种sequencing protocols （strand nonspecific, strand specific - forward, strand specific - reverse)，并选择合适的参数计算shape02的read count matrix，给出AT1G09530基因(PIF3基因)上的counts数目。
 利用RSeQC软件，代码如下：
 ```shell
