--- a/HW8_刘尧瑞_2021013294.md
+++ b/HW8_刘尧瑞_2021013294.md
@@ -21,7 +21,10 @@ venn.diagram(list(DESeq2 = rownames(deseq2.table),edgeR = rownames(edger.table))
 
 **code:**
 ```R
+#以下代码添加在edgeR做差异分析的代码之后即可
 diff.table.filtered <- diff.table[diff.table$FDR < 0.05,]
-write.table(diff.table.filtered, file = 'edger.wt.light.vs.dark.filter.txt', sep = "\t", quote = F, row.names = T, col.names = T)
-
+raw.counts <- read.table("C:\\Users\\86135\\Desktop\\count_exon.txt", sep='\t', header = T,row.names = 1)
+edger.seq.table = diff.table.filtered[order(-diff.table.filtered$logFC),]
+sort.gene = c(head(rownames(edger.seq.table),10),tail(rownames(edger.seq.table),10))
+sort.counts = raw.counts[sort.gene,]
 ```
