--- a/HW8_刘尧瑞_2021013294.md
+++ b/HW8_刘尧瑞_2021013294.md
@@ -1,3 +1,9 @@
+### 1.什么是Multiple test correction? 并解释 q value(很多时候也叫FDR) 和 p value 的差别。
+
+
+
+---
+
 ### 3.利用我们以上介绍的方法和数据，分别使用DESeq2和edgeR找出uvr8突变型（uvr8）在光照前后的差异基因，保存为文本文件。
 
 输出文件见文件夹。使用DESeq2的结果为wt.light.vs.dark.all.txt,使用edgeR的结果为edger.wt.light.vs.dark.all.txt。
@@ -14,7 +20,8 @@ venn.diagram(list(DESeq2 = rownames(deseq2.table),edgeR = rownames(edger.table))
 ```
 结果如下：
 
-![deseq2 vs edger venn](https://github.com/GodLemma/Bioinformatics/assets/162097106/ac2ce73e-79c0-4be5-b5bb-60768e541b5b)
+![Rplot1](https://github.com/GodLemma/Bioinformatics/assets/162097106/77eb993a-82d9-4345-973c-56281e60d2c3)
+
 
 ---
 ### 5.对于edgeR找出的FDR<0.05的基因，选出log2FoldChange最大的10个基因和最小的10个基因。计算原始表达量矩阵的log10CPM值并对每个基因进行Z-score处理，使用刚才筛选出来的20个基因绘制热图（heatmap）作为最后结果输出。
@@ -27,4 +34,22 @@ raw.counts <- read.table("C:\\Users\\86135\\Desktop\\count_exon.txt", sep='\t', 
 edger.seq.table = diff.table.filtered[order(-diff.table.filtered$logFC),]
 sort.gene = c(head(rownames(edger.seq.table),10),tail(rownames(edger.seq.table),10))
 sort.counts = raw.counts[sort.gene,]
+library(pheatmap)
+counts.matrix = as.matrix(sort.counts)
+CPM.matrix <- t(1000000*t(counts.matrix)/colSums(counts.matrix))
+log10.CPM.matrix <- log10(CPM.matrix+1) # 1 为pseudocount, 避免count为0时对数未定义的情况 
+z.scores <- (log10.CPM.matrix - rowMeans(log10.CPM.matrix))/apply(log10.CPM.matrix,1,sd)
+annotation_col = data.frame(CellType = factor(rep(colnames(sort.counts), 1)))
+colnames(z.scores) <- c(1:12)
+rownames(annotation_col) = colnames(z.scores)
+ann_colors  = list(colorRampPalette(c("navy", "white", "firebrick3"))(1000))
+pheatmap(z.scores, 
+         cluster_rows=TRUE,  cluster_cols=TRUE,show_colnames=FALSE, 
+         annotation_col = annotation_col, annotation_colors = ann_colors)
 ```
+
+结果如下：
+
+![Rplot02](https://github.com/GodLemma/Bioinformatics/assets/162097106/140f5535-4d2e-463f-b18f-e52b6627f29e)
+
+---
