--- a/HW8_刘尧瑞_2021013294.md
+++ b/HW8_刘尧瑞_2021013294.md
@@ -1,9 +1,29 @@
 ### 1.什么是Multiple test correction? 并解释 q value(很多时候也叫FDR) 和 p value 的差别。
 
-
+multiple test corretion，即在多组数据上重复模型检验。p value 是某一次检验的阴性概率，而q value则是在多次检验后所有阳性数据中出现假阳性的概率。
 
 ---
+### 2.请结合上课时所讲的知识阐述DESeq2和edgeR中如何对数据进行 normalization，列出并解释具体的公式 。
 
+DESeq2使用RLE算法进行归一化，具体公式为：
+
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/a20aef66-3f13-496e-874a-5e0af02914c1)
+
+其中，$C_j$为需要计算的样本j的归一化因子，$K_{gj}$为样本j中基因g的counts数，$C_{raw}(g)$与$K_{gj}$含义一致。这样计算后，可以让每个样本中基因表达比较接近平均水平（几何平均）的counts仍然比较接近平均水平，而差异较大的则靠近平均，并且能够维持同一组样本内的基因表达差异和不同样本间的基因表达差异。
+
+edgeR使用了TMM算法进行归一化，具体公式为：
+
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/c18204e0-ecc3-4548-bf00-9b9d7eef1e8d)
+
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/90dd1ae3-d4fa-40ef-a5b9-45a1399a75cb)
+
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/03153433-758d-48d9-9513-ddb863c0b63c)
+
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/8f483e26-449e-445e-a515-5ad5d86ced90)
+
+其中，$K_{gj}$，$C_j$,$C_{raw}(g)$与RLE中含义一致.$D_j$为$K_{gj}$关于g求和，即样本j中所有reads数，而$D_r$为参考样本的所有reads数。这样计算后，可以让每个样本中基因表达比较接近平均水平（算数平均）的counts仍然比较接近平均水平，而差异较大的则靠近平均，并且能够维持同一组样本内的基因表达差异和不同样本间的基因表达差异。
+
+---
 ### 3.利用我们以上介绍的方法和数据，分别使用DESeq2和edgeR找出uvr8突变型（uvr8）在光照前后的差异基因，保存为文本文件。
 
 输出文件见文件夹。使用DESeq2的结果为wt.light.vs.dark.all.txt,使用edgeR的结果为edger.wt.light.vs.dark.all.txt。
