--- a/HW8_刘尧瑞_2021013294.md
+++ b/HW8_刘尧瑞_2021013294.md
@@ -9,7 +9,15 @@ DESeq2使用RLE算法进行归一化，具体公式为：
 
 ![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/a20aef66-3f13-496e-874a-5e0af02914c1)
 
-其中，$C_j$为需要计算的样本j的归一化因子，$K_{gj}$为样本j中基因g的counts数，$C_{raw}(g)$与$K_{gj}$含义一致。这样计算后，可以让每个样本中基因表达比较接近平均水平（几何平均）的counts仍然比较接近平均水平，而差异较大的则靠近平均，并且能够维持同一组样本内的基因表达差异和不同样本间的基因表达差异。
+其中，
+$C_j$
+为需要计算的样本j的归一化因子，
+$K_{gj}$
+为样本j中基因g的counts数，
+$C_{raw}(g)$
+与
+$K_{gj}$
+含义一致。这样计算后，可以让每个样本中基因表达比较接近平均水平（几何平均）的counts仍然比较接近平均水平，而差异较大的则靠近平均，并且能够维持同一组样本内的基因表达差异和不同样本间的基因表达差异。
 
 edgeR使用了TMM算法进行归一化，具体公式为：
 
@@ -21,7 +29,19 @@ edgeR使用了TMM算法进行归一化，具体公式为：
 
 ![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/8f483e26-449e-445e-a515-5ad5d86ced90)
 
-其中，$K_{gj}$，$C_j$,$C_{raw}(g)$与RLE中含义一致.$D_j$为$K_{gj}$关于g求和，即样本j中所有reads数，而$D_r$为参考样本的所有reads数。这样计算后，可以让每个样本中基因表达比较接近平均水平（算数平均）的counts仍然比较接近平均水平，而差异较大的则靠近平均，并且能够维持同一组样本内的基因表达差异和不同样本间的基因表达差异。
+其中，
+$K_{gj}$
+，
+$C_j$
+,
+$C_{raw}(g)$
+与RLE中含义一致.
+$D_j$
+为
+$K_{gj}$
+关于g求和，即样本j中所有reads数，而
+$D_r$
+为参考样本的所有reads数。这样计算后，可以让每个样本中基因表达比较接近平均水平（算数平均）的counts仍然比较接近平均水平，而差异较大的则靠近平均，并且能够维持同一组样本内的基因表达差异和不同样本间的基因表达差异。
 
 ---
 ### 3.利用我们以上介绍的方法和数据，分别使用DESeq2和edgeR找出uvr8突变型（uvr8）在光照前后的差异基因，保存为文本文件。
@@ -73,3 +93,27 @@ pheatmap(z.scores,
 ![Rplot02](https://github.com/GodLemma/Bioinformatics/assets/162097106/140f5535-4d2e-463f-b18f-e52b6627f29e)
 
 ---
+
+
+# GO/KEGG
+
+### 1.从wt.light.vs.dark.all.txt(这是我们在差异表达一节获得的野生型的结果)中选取显著上调的(FDR<0.05, logFC>1)的基因进行GO分析。
+
+结果见文件夹analysis.txt，部分网页结果如下:
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/51dd08dc-3516-4ec8-a8c3-cdd62cebd329)
+
+---
+### 2.请问上面的例子中， Fold Enrichment和P value是如何计算的? 请写出公式，并解释原理。此外，在定义显著富集的 GO terms 时为什么一般不是参考P value的大小，而是要计算一个 FDR来做为参考？
+
+计算方法：
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/a4f7ff1e-5ce9-4af1-8e43-ab6a7f4a8c28)
+
+即，Fold Enrichment是具有该条GO注释的基因占所有能打上GO注释的基因的比例（提供的样本中可能有无法在GO库中找到的基因）。p value是指，在N个基因中，有M个在该条GO注释中，此时随机抽取n个基因，观察到在该条GO注释中的基因个数为k个，出现该结果(或更罕见情况)的概率，这是一个超几何分布。
+显著富集的GO terms因为做的是多重检验，容易出现假阳性的情况，用FDR更加可信.
+
+### 3.请用 KEGG enrichment 分析上一章(GO enrichment analysis)中的基因集，比较两章的结果，总结两种方法得到的生物学意义有哪些异同。
+
+结果如下：
+![image](https://github.com/GodLemma/Bioinformatics/assets/162097106/3b10ae13-bfcf-4ac6-a584-f75389364b39)
+
+从结果可以看到，GO关注的是特定的特征，如分子功能，细胞组分，生物过程，而KEGG关注的是基因所处的代谢通路和信号传导。
