--- a/HW10_刘尧瑞_2021013294.md
+++ b/HW10_刘尧瑞_2021013294.md
@@ -1,3 +1,26 @@
+### 1.请解释在ChIP-seq实验中为什么一般都要平行做一个 control （通常叫 input）的实验。
+input是阳性对照，可以用来排除CHIP-seq结果中由于本身表达水平就很高或者非特异性结合的假阳性情况。
+
+---
+### 2.请解释 findPeaks 和 findMotifsGenome.pl 主要参数的含义。
+findpeaks：
+
+-style: 有factor,histone两种选择。如前所述，转录因子和组蛋白修饰的CHIP-seq peak有不同的特性，所以在peak calling中也会使用不同的策略。
+
+-o : 输出文件路径
+
+-i : 存储input样本中间文件的"tag directory"
+
+
+findMotifGenome.pl:
+
+-len: motif长度，可以设置多个长度，用逗号隔开。默认为8,10,12。
+
+-size: 用来寻找motif的区间长度。
+
+-S: 指定需要找到的motif数量。
+
+---
 ### 3.我们在容器的/home/test/chip-seq/homework目录中提供了酵母Snf1蛋白CHIP-seq的bam文件，ip.chrom_part.bam为IP实验数据，input.chrom\_part.bam为背景数据。请大家从这两个文件出发，用homer重复本章中介绍的peak calling和motif finding分析。请大家提交找到的motif的截图，以及Fold Change (vs Control) >=8且p-value (vs Control) < $10^{-8}$ 的peaks(建议放在同一个文件中提交)。
 
 motif图片如下所示：
