--- a/HW13_刘尧瑞_2021013294.md
+++ b/HW13_刘尧瑞_2021013294.md
@@ -73,8 +73,17 @@ plot(roc.curve,print.auc=T)
 ```
 
 PCA可视化图：
+
 ![Rplot](https://github.com/GodLemma/Bioinformatics/assets/162097106/3dd21c34-9895-4d0b-8492-73dabaa0ad70)
 
 ROC曲线：
+
 ![AUCOC](https://github.com/GodLemma/Bioinformatics/assets/162097106/c3599a8e-2ac9-48ea-b4fd-87f2cb7317bd)
 
+### 8.2 请大家查阅资料，回答以下两个关于随机森林的问题：1）随机森林中树的数量是不是一个需要通过交叉验证调整的超参数?为什么?2）请问什么是随机森林的out-of-bag (OOB) error?它和bootstrapping有什么关系?
+
+Answer：
+
+1）不需要。因为随机森林算法的泛化误差会几乎处处收敛，因此整体来说会随着树的增加，模型的准确度也会增加。
+
+2）由于随机森林是一种Bootstrapping方法，所以它每次选择训练集时是有放回的选择，计算概率可以发现这种有放回选取会使得大概三分之一的样本没有被选到，这部分样本称为袋外数据（out-of-bag data），由于袋外数据没有参与训练，可以用它们来做交叉验证检验模型的泛化能力。由于每一颗树都能计算出一个袋外数据的误差，用他们的均值作为该随机森林模型的OOB error.
